# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.19 ==
 * Fork omni/stitcher processes (#1106)
   * omni/stitching calls from create_sliver run asynchronously
   * Keep temporary files after creating slivers
   * Add bug reporting feature
   * Store request RSpecs (#164)
   * Show request RSpec used in a slice (#165)
   * Store manifest RSpecs (#225)
   * New tabbed results page shows logs of allocations
   * Go back to view previous allocation logs/results via link in "Recent Messages"
   * Per-node results show long-form name of AM for stitching requests
   * User-friendly error message shows when an error occurs due to the tool (#1131)
   * omni invocation related files are referenced by constants (#1132)
   * Results page shows aggregate managers' long form names
   * Results page includes Jacks viewer of manifest RSpec
   * Some support for SpeaksFor
   * Bug/problem report page text updated via discussions with experimenter support group 
 * Comments and clearer logs when DB inconsistency gives WiMAX errors (#1058)
 * Add comments about new error messages in WiMAX (#1077)
  * Handle error 20 (group exists) by treating attempt to create
    the group as successful and adding the user to the group
    if needed.
 * WiMAX user and group names now start with "geni-". (#1094)
  * Added new project attribute for the `wimax_group_name`.
  * If project/group leads differ and new lead
    has no wimax account, add them to the group and make
    them lead.
  * Handle timeouts better.
  * Add/remove of member attributes clears the member cache in ma_client.
 * If user in the project is disabled, remove them from the WiMAX group (#1124)
 * View RSpecs using Jacks viewer (#1127)

== 2.18.1 ==
 * When displaying a stitching RSpec, do not filter results by AM. (#1130)